t+fi:[[kiusata]] ([[WT:EDIT|Assisted]]) <badger#7100057>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -117,6 +117,7 @@
 {{trans-top|pester}}
 * Bulgarian: {{t|bg|дразня|sc=Cyrl}},  {{t|bg|безпокоя|sc=Cyrl}}
 * Dutch: [[lastigvallen]], [[plagen]]
+* Finnish: {{t|fi|kiusata}}
 * German: {{t+|de|belästigen}}, {{t+|de|plagen}}, {{t+|de|piesacken}}
 {{trans-mid}}
 * Greek: {{t+|el|ταράζω|sc=Grek}}, {{t+|el|ζαλίζω|sc=Grek}}
