--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -18,7 +18,7 @@
 # A [[native]] or [[resident]] of the American State of [[Wisconsin]].
 # {{context|plural|vulgar|cant}} A crew of desperate [[villain]]s who robbed near rivers, into which they threw the bodies of those they murdered.
 
-====Synonyms====
+=====Synonyms=====
 * {{sense|native or resident of Wisconsin}} [[Wisconsinite]]
 
 =====Derived terms=====
