--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -34,6 +34,7 @@
 * [[Afrikaans]]: [[ratel]]
 * Albanian: {{t+|sq|baldosë|f|xs=Albanian}}
 * Armenian: {{t|hy|գորշուկ|tr=goršuk|sc=Armn}},  {{t|hy|փորսուղ|tr=p’orsuġ|sc=Armn}},  {{t|hy|իշղար|tr=išġar|sc=Armn}}
+* [[Azeri]]: {{t|az|porsuq}}
 * [[Basque]]: [[azkonar]]
 * Belarusian: {{t-|be|барсук|m|sc=Cyrl|xs=Belarusian}}
 * [[Breton]]: [[broc’h]] {{g|Breton}}
@@ -52,6 +53,7 @@
 * French: {{t+|fr|blaireau|m}}
 * [[Friulian]]: [[tac]], [[tas]]
 * [[Galician]]: [[teixugo]] {{m}}, [[porco teixo]] {{m}}
+* Georgian: {{t|ka|მაჩვი|tr=mač’vi|sc=Geor}}
 * German: {{t+|de|Dachs|m}}
 * Greek: {{t+|el|ασβός|m|sc=Grek}}
 * Hebrew: {{t-|he|גירית|f|alt=גִּירִית|sc=Hebr}}
@@ -60,9 +62,9 @@
 * Irish: {{t+|ga|broc|m|xs=Irish}}
 * Italian: {{t+|it|tasso|m}}
 * Japanese: {{t-|ja|アナグマ|tr=anaguma|sc=Jpan}}
+{{trans-mid}}
 * Khalkha Mongolian: [[дорго]] (dorog)
 * Korean: [[오소리]] (osori)
-{{trans-mid}}
 * Kurdish:
 ** Kurmanji: [[kurbeşk]]
 * [[Ladin]]: [[tas]]
