t+hy:[[հետապնդել]] t+hy:[[հալածել]] t+hy:[[ջղայնացնել]] t+hy:[[հոգին հանել]] t+hy:[[տեռորի տակ պահել]] t-balance ([[WT:EDIT|Assisted]]) <badger#7101060>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -121,11 +121,12 @@
 
 =====Translations=====
 {{trans-top|pester}}
+* Armenian: {{t|hy|հետապնդել|tr=hetapndel|sc=Armn}},  {{t|hy|հալածել|tr=halaçel|sc=Armn}},  {{t|hy|ջղայնացնել|tr=ǰġaynac’nel|sc=Armn}},  {{t|hy|հոգին հանել|tr=hogin hanel|sc=Armn}},  {{t|hy|տեռորի տակ պահել|tr=teṙori tak pahel|sc=Armn}}
 * Bulgarian: {{t|bg|дразня|sc=Cyrl}},  {{t|bg|безпокоя|sc=Cyrl}}
 * Dutch: [[lastigvallen]], [[plagen]]
 * Finnish: {{t|fi|kiusata}}
-* German: {{t+|de|belästigen}}, {{t+|de|plagen}}, {{t+|de|piesacken}}
 {{trans-mid}}
+* German: {{t+|de|belästigen}}, {{t+|de|plagen}}, {{t+|de|piesacken}}
 * Greek: {{t+|el|ταράζω|sc=Grek}}, {{t+|el|ζαλίζω|sc=Grek}}
 * Russian: {{t|ru|дразнить}}
 * Spanish: {{t|es|fastidiar, molestar}}
