--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -31,7 +31,7 @@ From {{etyl|ang}} ''[[bindan]]''.
 * Dutch: {{t+|nl|binden}}, {{t+|nl|verbinden}}, {{t-|nl|koppelen}}
 * Finnish: {{t+|fi|sitoa}}, {{t+|fi|yhdistää}}
 * French: [[relier]] (livre)
-* German: [[verbinden]] (1,2), [[konnektieren]] (1)
+* German: [[verbinden]], [[konnektieren]]
 * [[Ido]]: [[bindar]]
 {{trans-mid}}
 * Indonesian: [[ikat]], [[sambung]], [[hubung]]
@@ -41,6 +41,15 @@ From {{etyl|ang}} ''[[bindan]]''.
 * Romanian: [[cuplare]] , [[conectare]] , [[legare]]
 * Russian: {{qualifier|imperfective}} {{t|ru|вязать|tr=vjazát'|sc=Cyrl}},  {{qualifier|imperfective}} {{t|ru|связывать|tr=svjázyvat'|sc=Cyrl}},  {{qualifier|perfective}} {{t|ru|связать|tr=svjazát'|sc=Cyrl}}
 * Spanish: [[atar]] (tie), [[empastar]] (books)
+{{trans-bottom}}
+
+{{trans-top|couple}}
+* German: [[verbinden]] 
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|put together in a cover, as of books}}
+{{trans-mid}}
 {{trans-bottom}}
 
 ====Derived terms====
