--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -25,6 +25,7 @@ From {{etyl|ang}} ''[[bindan]]''.
 ====Translations====
 {{trans-top|connect}}
 * Arabic: {{t|ar|ربط|tr=rabaTa|sc=Arab}}
+* Bulgarian: {{t|bg|свързвам|sc=Cyrl}}
 * Chinese: {{t-|cmn|捆|tr=kǔn|sc=Hani|xs=Mandarin}}, {{t|cmn|包扎|tr=bāozā|sc=Hani|xs=Mandarin}}, {{zh-tsp|綁|绑|bǎng}}
 * [[Crimean Tatar]]: [[bint#Crimean Tatar|bint]]
 * Czech: [[vázat]] (''by a promise'')
@@ -44,11 +45,13 @@ From {{etyl|ang}} ''[[bindan]]''.
 {{trans-bottom}}
 
 {{trans-top|couple}}
+* Bulgarian: {{t|bg|връзвам|sc=Cyrl}},  {{t|bg|приързвам|sc=Cyrl}}
 * German: [[verbinden]] 
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|put together in a cover, as of books}}
+* Bulgarian: {{t|bg|подвързвам|sc=Cyrl}}
 {{trans-mid}}
 {{trans-bottom}}
 
