/* See also */ <moneylender#7108194>

--- a/en/m/moneylender.720245.wikitext
+++ b/en/m/moneylender.720245.wikitext
@@ -9,3 +9,9 @@
 *[[loan shark]]
 
 [[zh:moneylender]]
+
+===Translations===
+{{trans-top}}
+* Portuguese: {{t+|pt|agiota|c}}
+{{trans-mid}}
+{{trans-bottom}}
