--- a/en/b/blown.6805.wikitext
+++ b/en/b/blown.6805.wikitext
@@ -24,6 +24,25 @@
 # (''glass'') [[formed]] by [[blowing]]
 # (''[[marijuana]]'') under the influence of [[drug]]s
 
+====Translations====
+{{trans-top|[[distended]], [[swollen]] or [[inflated]]}}
+* Bulgarian:
+{{trans-mid}}
+
+{{trans-bottom}}
+
+{{trans-top|[[panting]] and [[out of breath]]}}
+* Bulgarian:
+{{trans-mid}}
+
+{{trans-bottom}}
+
+
+{{trans-top| (''glass'') [[formed]] by [[blowing]]}}
+* Bulgarian:
+{{trans-mid}}
+
+{{trans-bottom}}
 ====Derived terms====
 * [[full blown]]
 
