assisted entry only works for first block...... <blow#7117680>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -160,6 +160,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 
 {{trans-top|squander}} <!--7-->
 * Chinese tradtional/simplified: [[浪費]], [[浪費]] (làng fèi)
+* Dutch: {{t-|nl|doorjagen}}
 * Finnish: {{t+|fi|tuhlata}}, {{t-|fi|törsätä}}
 * Korean: [[날리다]] (nallida)
 {{trans-mid}}
