--- a/en/a/amice.720080.wikitext
+++ b/en/a/amice.720080.wikitext
@@ -1,11 +1,9 @@
 ==Latin==
 
 ===Noun===
-'''amice''' {{m}}
+{{la-noun-form|amice}} {{m}}
 
 # {{inflection of|amicus||voc|s|lang=la}}
-
-[[Category:Latin noun forms]]
 
 ----
 
