/* English */ wording <rub salt in the wound#7120771>

--- a/en/r/rub salt in the wound.742296.wikitext
+++ b/en/r/rub salt in the wound.742296.wikitext
@@ -3,7 +3,7 @@
 ===Verb===
 {{infl|en|verb|head=to [[rub]] [[salt]] [[in]] [[the]] [[wound]]}}
 
-# {{idiomatic}} To make someone's [[suffering]] even [[worse]].
+# {{idiomatic}} To make an injury feel worse.
 
 ====Synonyms====
 * [[add insult to injury]]
