/* English */ alt forms <rub salt in the wound#7120772>

--- a/en/r/rub salt in the wound.742296.wikitext
+++ b/en/r/rub salt in the wound.742296.wikitext
@@ -1,5 +1,9 @@
 ==English==
 
+===Alternative forms===
+*[[rub salt in someone's wounds]]
+*[[rub salt into the wounds]]
+
 ===Verb===
 {{infl|en|verb|head=to [[rub]] [[salt]] [[in]] [[the]] [[wound]]}}
 
