/* Noun */ "thing" is U.S. and Commonwealth slang for penis. See: Blackadder the Second episode titled "Beer" where they refer to a turnip resembling a "thingy" <thing#7123447>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -26,7 +26,7 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 # In [[Scandinavian]] countries, a [[legislative]] or [[judicial]] [[assembly]].
 # ''(in certain fixed expressions)'' A [[problem]], [[dilemma]], or [[complicating]] [[factor]].
 #: ''The car looks cheap, but the thing is, I have doubts about its safety.''
-# {{context|U.S. slang}} A [[penis]].
+# {{context|slang}} A [[penis]].
 # A [[living]] being or creature.
 #: ''you poor '''thing'''''
 # That which matters; the [[crux]].
