t+is:[[brotna]] t-balance t+is:[[brjóta]] t+is:[[brjóta niður]] t+is:[[skemma]] t+is:[[eyðileggja]] ([[WT:EDIT|Assisted]]) <break#7123850>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -133,12 +133,12 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Hebrew: {{t-|he|נשבר|tr=nishbár|sc=Hebr}}
 * {{trreq|Hindi}}
 * Hungarian: [[törik]], [[eltörik]]
-* {{trreq|Icelandic}}
+* Icelandic: {{t|is|brotna}}
 * [[Ido]]: {{t+|io|ruptar|xs=Ido}}
 * Irish: {{t-|ga|bris|xs=Irish}}
+{{trans-mid}}
 * Italian: {{t+|it|rompere}}
 * Japanese: [[割れる]] (wareru), [[散らばる]] (chirabaru)
-{{trans-mid}}
 * Korean: [[부러지다]] (bureojida)
 * Latin: [[frangi]], [[confringi]], [[rumpi]]
 * Latvian: {{t-|lv|salūzt|xs=Latvian}}, {{t-|lv|lūzt|xs=Latvian}}
@@ -170,6 +170,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Hebrew: {{t-|he|נשבר|tr=nishbár|sc=Hebr}}
 * Hungarian: [[eltörik]]
 {{trans-mid}}
+* Icelandic: {{t|is|brotna}}
 * Irish: {{t-|ga|bris|xs=Irish}}
 * Italian: {{t+|it|rompere}}
 * Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
@@ -191,8 +192,9 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * German: {{t+|de|brechen}}
 * Hebrew: {{t-|he|שבר|tr=shavár|sc=Hebr}}
 * Hungarian: {{t+|hu|eltör}}
-* Irish: {{t-|ga|bris|xs=Irish}}
+* Icelandic: {{t|is|brjóta}},  {{t|is|brjóta}}
 {{trans-mid}}
+* Irish: {{t-|ga|bris|xs=Irish}}
 * Japanese: [[ひびが入る]] (hibi ga hairu), [[折れる]] (oreru)
 * Korean: [[부러뜨리다]] (bureotteurida)
 * Latvian: {{t-|lv|salauzt|xs=Latvian}}, {{t-|lv|lauzt|xs=Latvian}}
@@ -212,6 +214,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * German: {{t+|de|brechen}}
 * Hebrew: {{t-|he|שבר|tr=shavár|sc=Hebr}}
 * Hungarian: {{t+|hu|eltör}}
+* Icelandic: {{t|is|brjóta}}
 {{trans-mid}}
 * Irish: {{t-|ga|bris|xs=Irish}}
 * Japanese: [[ひびが入る]] (hibi ga hairu), [[折れる]] (oreru)
@@ -233,9 +236,10 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Greek: {{t|el|χαλάω|tr=chal'ao|sc=Grek}}
 * Hebrew: {{t-|he|התקלקל|tr=hitkalkél|sc=Hebr}}
 * Hungarian: {{t+|hu|elromlik}}
+* Icelandic: {{t|is|brjóta}}
 * Irish: {{t-|ga|bris|xs=Irish}}
-* Italian: {{t-|it|rompersi}}
 {{trans-mid}}
+* Italian: {{t-|it|rompersi}}
 * Japanese: [[壊れる]] (kowareru)
 * Korean: [[부서지다]] (buseojida)
 * Latvian: {{t-|lv|salūzt|xs=Latvian}}, {{t-|lv|lūzt|xs=Latvian}}
@@ -332,6 +336,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Greek: {{t|el|χαλάω|tr=chal'ao|sc=Grek}}
 * Hebrew: {{t-|he|שבר|tr=shavár|sc=Hebr}}
 * Hungarian: {{t+|hu|elront}}
+* Icelandic: {{t|is|skemma}},  {{t|is|eyðileggja}}
 {{trans-mid}}
 * Irish: {{t-|ga|bris|xs=Irish}}
 * Japanese: [[壊す]] (kowasu), [[破壊する]] (hakai-suru)
@@ -353,6 +358,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * German: {{t+|de|brechen}}
 * Hebrew: {{t-|he|שבר|tr=shavár|sc=Hebr}}
 * Hungarian: [[elkedvtelenít]]
+* Icelandic: {{t|is|brjóta niður}}
 {{trans-mid}}
 * Irish: {{t-|ga|bris|xs=Irish}}
 * Japanese: [[壊す]] (kowasu), [[破壊する]] (hakai-suru)
@@ -374,6 +380,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Hebrew: {{t-|he|הפר|tr=hefér|sc=Hebr}}
 * Hungarian: {{t+|hu|megszeg}}
 {{trans-mid}}
+* Icelandic: {{t|is|brjóta}}
 * Japanese: [[破る]] (yaburu), [[犯す]] (okasu)
 * Korean: [[깨다]] (kkaeda)
 * Latvian: {{t-|lv|pārkāpt|xs=Latvian}}
@@ -386,6 +393,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 
 {{trans-top|of a wave, to collapse into a surf}}
 * Finnish: {{t+|fi|murtua}}
+* Icelandic: {{t|is|brotna}}
 {{trans-mid}}
 * Swedish: {{t+|sv|bryta}}
 {{trans-bottom}}
