--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -88,6 +88,7 @@ From the prefix [[mega-]].
 * [[mega ekki hugsa til]]
 * [[eins og nærri má geta]]
 
+[[Category:Icelandic auxiliary verbs]]
 [[Category:Icelandic verbs]]
 [[Category:Most used Icelandic verbs]]
 
