t+ca:[[límit]] ([[WT:EDIT|Assisted]]) <bound#7128365>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -75,6 +75,7 @@ See [[bind]]
 
 =====Translations=====
 {{trans-top|boundary, border of territory}}
+* [[Catalan]]: {{t|ca|límit|m}}
 * Dutch: {{t+|nl|grens}}, {{t+|nl|limiet}}
 * Finnish: {{t+|fi|raja}}
 * French: {{t+|fr|frontière}}
