--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -17,6 +17,8 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 # {{context|biology|taxonomy}} A [[rank]] in the classification of [[organism]]s, below [[genus]] and above [[subspecies]]; a [[taxon]] at that rank
 #* Darwin, ''On the Origin of '''Species''''':
 #*: ''Hence, in determining whether a form should be ranked as a '''species''' or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.''
+# {{obsolete}} The [[image]] of something cast on a surface, or [[reflected]] from a surface, or [[refracted]] through a [[lens]] or [[telescope]]; a [[reflection]].
+#:''I cast the '''species''' of the Sun onto a sheet of paper through a telescope.''
 # {{mineralogy}} A [[mineral]] with a unique chemical formula whose [[crystals]] belong to a unique crystallographic system.
 # {{chemistry}} {{rfv-sense|is this sense or non-sense?}} A specific known or unknown [[element]], [[molecule]], [[radical]] or [[ion]]; used commonly when the [[entity]]'s status as an element, molecule etc. is unknown.
 
@@ -106,6 +108,9 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 * {{ttbc|Spanish}}: [[especie]] {{f}}
 * {{ttbc|Swedish}}: [[art]] {{c}}
 {{checktrans-bottom}}
+
+====References====
+* {{R:OED2}}
 
 [[Category:English invariant nouns]]
 [[Category:English nouns with irregular plurals]]
