--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -124,6 +124,7 @@ See [[bind]]
 
 =====Translations=====
 {{trans-top|to surround a territory}}
+* Bulgarian: {{t|bg|ограничавам|sc=Cyrl}}
 * Dutch: {{t+|nl|begrenzen}}, {{t-|nl|omringen}}
 * Estonian: {{t|et|tõkestama}}
 * Finnish: {{t-|fi|reunustaa}}
@@ -153,6 +154,7 @@ See [[bind]]
 =====Translations=====
 {{trans-top|sizeable jump}}
 * [[Basque]]: {{t|eu|jauzi|xs=Basque}}, {{t-|eu|salto|xs=Basque}}
+* Bulgarian: {{t|bg|скок|m|sc=Cyrl}}
 * Dutch: {{t-|nl|sprong}}
 * Finnish: {{t-|fi|hyppy}}, {{t-|fi|loikka}}
 * French: {{t+|fr|bond|f}}, {{t+|fr|saut|m}}
@@ -173,6 +175,7 @@ See [[bind]]
 
 =====Translations=====
 {{trans-top|to leap}}
+* Bulgarian: {{t|bg|скачам|sc=Cyrl}}
 * Dutch: {{t+|nl|springen}}
 * Finnish: {{t-|fi|hyppiä}}, {{t-|fi|hypähdellä}}
 {{trans-mid}}
@@ -200,18 +203,21 @@ Alteration of ''[[boun]]'', with '''-d''' partly for [[euphonic]] effect and par
 
 =====Translations=====
 {{trans-top|ready, prepared}}
+* Bulgarian: {{t|bg|готов|sc=Cyrl}}
 * Dutch: {{t+|nl|bereid}}
 {{trans-mid}}
 * Italian: {{t+|it|destinato}}
 {{trans-bottom}}
 
 {{trans-top|ready to start or go (to); moving in the direction (of)}}
+* Bulgarian: {{t|bg|на път за|sc=Cyrl}}
 * Dutch: [[bestemd]] (voor)
 {{trans-mid}}
 * Italian: {{t+|it|diretto}}, {{t-|it|incamminato}}
 {{trans-bottom}}
 
 {{trans-top|constrained by something, or constrained to something}}
+* Bulgarian: {{t|bg|свързан|sc=Cyrl}},  {{t|bg|обвързан|sc=Cyrl}}
 * Danish: {{t|da|begrænset}}
 * Finnish: [[sidottu]]
 {{trans-mid}}
