t+bg:[[чупя се]] t+bg:[[чупя]] t+bg:[[развалям се]] t+bg:[[прекъсвам]] t+bg:[[пробивам]] t+bg:[[разбивам]] t+bg:[[развалям]] t+bg:[[пречупвам]] t+bg:[[нарушавам]] t+bg:[[разб <break#7135812>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -120,6 +120,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Arabic: {{Arab|[[كسر]]}} (kásara), {{Arab|انكسر}} (inkásara)
 * Armenian: [[ջարդվել]] (ǰardvel), [[կոտրվել]] (kotərvel)
 * {{trreq|Basque}}
+* Bulgarian: {{t|bg|чупя се|sc=Cyrl}}
 * Chinese: [[打破]] (dǎpò)
 * Czech: {{t-|cs|rozbít}} se, {{t-|cs|zlomit}} se
 * Danish: gå i [[stykke]]r, gå [[itu]]
@@ -160,6 +161,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 
 {{trans-top|of a bone: to crack}}
 * Armenian: [[ջարդվել]] (ǰardvel), [[կոտրվել]] (kotərvel)
+* Bulgarian: {{t|bg|чупя се|sc=Cyrl}}
 * Czech: {{t-|cs|zlomit si}}
 * Danish: [[brække]]
 * Dutch: {{t+|nl|breken}}
@@ -185,6 +187,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 
 {{trans-top|transitive: of a bone, to cause to crack}}
 * Armenian: [[ջարդել]] (ǰardel), [[կոտրել]] (kotrel)
+* Bulgarian: {{t|bg|чупя|sc=Cyrl}}
 * Danish: [[brække]]
 * Dutch: {{t+|nl|breken}}
 * Finnish: {{t-|fi|murtaa}}, {{t+|fi|katkaista}}, {{t+|fi|taittaa}}
@@ -207,6 +210,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 
 {{trans-top|transitive: of a bone, to fracture accidentally}}
 * Armenian: [[կոտրել]] (kotrel)
+* Bulgarian: {{t|bg|чупя|sc=Cyrl}}
 * Danish: [[brække]]
 * Dutch: {{t+|nl|breken}}
 * Finnish: {{t-|fi|murtaa}}, {{t+|fi|katkaista}}, {{t+|fi|taittaa}}
@@ -228,6 +232,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 
 {{trans-top|intransitive: stop functioning properly or altogether}}
 * Armenian: [[փչանալ]] (p'čanal)
+* Bulgarian: {{t|bg|развалям се|sc=Cyrl}}
 * Danish: gå i [[stykke]]r, gå [[itu]]
 * Dutch: [[stukgaan]], [[kapotgaan]]
 * Finnish: {{t+|fi|hajota}}, {{t-|fi|mennä rikki}}
@@ -252,6 +257,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 {{trans-bottom}}
 
 {{trans-top|intransitive: interrupt or cease one's work or occupation temporarily}}
+* Bulgarian: {{t|bg|прекъсвам|sc=Cyrl}}
 * Danish: holde [[pause]]
 * Dutch: [[pauzeren]]
 * Finnish: [[pitää]] [[tauko]]
@@ -266,6 +272,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 {{trans-bottom}}
 
 {{trans-top|intransitive: to win a game as receiver in tennis}}
+* Bulgarian: {{t|bg|пробивам|sc=Cyrl}}
 * Danish: {{t+|da|bryde}}
 * Finnish: {{t-|fi|murtaa}}
 {{trans-mid}}
@@ -274,6 +281,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 {{trans-bottom}}
 
 {{trans-top|billiards: to make the first shot}}
+* Bulgarian: {{t|bg|разбивам|sc=Cyrl}}
 * Finnish: {{t+|fi|aloittaa}}, {{t-|fi|breikata}}
 * Greek: {{t|el|σπάω|tr='spao|sc=Grek}}
 * Japanese: [[ブレークする]] (burēku-suru)
@@ -287,6 +295,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Arabic: {{Arab|[[كسر]]}} (kásara), {{Arab|[[كسر]]}} (kássara)
 * Armenian: [[ջարդել]] (ǰardel), [[կոտրել]] (kotrel)
 * {{trreq|Basque}}
+* Bulgarian: {{t|bg|чупя|sc=Cyrl}}
 * [[Catalan]]: [[trencar]]
 * Chinese: [[打破]] (dǎpò)
 * Croatian: {{t-|hr|lomiti}}
@@ -327,6 +336,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 
 {{trans-top|transitive: to cause to malfunction}}
 * Armenian: [[ջարդել]] (ǰardel), [[կոտրել]] (kotrel), [[փչացնել]] (p'čac'nel)
+* Bulgarian: {{t|bg|развалям|sc=Cyrl}},  {{t|bg|разбивам|sc=Cyrl}}
 * Czech: {{t-|cs|pokazit}}
 * Danish: [[ødelægge]], [[smadre]]
 * Dutch: [[kapotmaken]]
@@ -351,6 +361,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 
 {{trans-top|transitive: cause a person or animal to lose his/her/its will}}
 * Armenian: [[կոտրել]] (kotrel)
+* Bulgarian: {{t|bg|пречупвам|sc=Cyrl}}
 * Danish: [[knække]], [[knuse]]
 * Dutch: {{t+|nl|breken}}
 * Finnish: {{t-|fi|lannistaa}}, {{t-|fi|murtaa}} {{t-|fi|tahto}}, {{t-|fi|nujertaa}}
@@ -372,6 +383,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 
 {{trans-top|transitive: do that which is forbidden by (a rule or rules)}}
 * Armenian: [[խախտել]] (xaxtel)
+* Bulgarian: {{t|bg|нарушавам|sc=Cyrl}}
 * Danish: [[bryde]], [[krænke]]
 * Dutch: {{t+|nl|breken}}, {{t-|nl|overtreden}}
 * Finnish: {{t+|fi|rikkoa}}
@@ -392,6 +404,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 {{trans-bottom}}
 
 {{trans-top|of a wave, to collapse into a surf}}
+* Bulgarian: {{t|bg|разбивам се|sc=Cyrl}}
 * Finnish: {{t+|fi|murtua}}
 * Icelandic: {{t|is|brotna}}
 {{trans-mid}}
@@ -423,11 +436,13 @@ The sense relating to a spell of weather is most likely to be used after a perio
 {{trans-bottom}}
 
 {{trans-top|US: to divide into smaller units}}
+* Bulgarian: {{t|bg|разбивам|sc=Cyrl}}
 * Finnish: {{t+|fi|jakaa}}; {{t-|fi|särkeä}} (''of money'')
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|of dawn, to arrive}}
+* Bulgarian: {{t|bg|пуквам|sc=Cyrl}}
 * Finnish: {{t+|fi|koittaa}}
 {{trans-mid}}
 {{trans-bottom}}
