--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -31,6 +31,7 @@
 * Italian: {{t+|it|si}},  {{t|it|già}}
 {{trans-mid}}
 * Japanese: {{t|ja|うん|tr=un|sc=Jpan}},  {{t|ja|そう|tr=sō|sc=Jpan}},  {{t|ja|ええ|tr=ē|sc=Jpan}}
+* Navajo: {{tø|nv|wehee}}
 * Polish: {{t+|pl|tak}}
 * Portuguese: {{t+|pt|sim}}
 * Russian: {{t|ru|ага|tr=agá, ahá|sc=Cyrl}},  {{t|ru|угу|tr=ugú, uhú|sc=Cyrl}},  {{t|ru|так|tr=tak|sc=Cyrl}}
