--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -24,6 +24,7 @@ Partly imitative, also influenced by {{term|burble}}.
 ====Translations====
 {{trans-top|spherically contained volume of air}}
 * Armenian: {{t-|hy|պղպջակ|tr=pġpǰak|sc=Hayeren|xs=Armenian}}
+* Bulgarian: {{t|bg|мехурче|n|sc=Cyrl}}
 * Chinese Characters: [[泡]]
 * Czech: {{t-|cs|bublina|f}}
 * Finnish: {{t-|fi|kupla}}
@@ -47,6 +48,7 @@ Partly imitative, also influenced by {{term|burble}}.
 {{trans-bottom}}
 
 {{trans-top|small spherical cavity in a solid}}
+* Bulgarian: {{t|bg|мехурче|n|sc=Cyrl}}
 * Finnish: {{t-|fi|kupla}}
 * French: {{t+|fr|trou|m}}
 * German: {{t+|de|Blase|f}}
@@ -59,6 +61,7 @@ Partly imitative, also influenced by {{term|burble}}.
 {{trans-bottom}}
 
 {{trans-top|anything resembling a hollow sphere}}
+* Bulgarian: {{t|bg|мехур|m|sc=Cyrl}}
 * Finnish: {{t-|fi|kupla}}
 * German: {{t+|de|Blase|f}}
 * Kurdish: {{t|ku|بڵق|sc=ku-Arab}}
@@ -123,6 +126,7 @@ Partly imitative, also influenced by {{term|burble}}.
 
 ====Translations====
 {{trans-top|to rise up in bubbles}}
+* Bulgarian: {{t|bg|кипя|sc=Cyrl}},  {{t|bg|клокоча|sc=Cyrl}}
 * Finnish: {{t-|fi|kuplia}}, {{t|fi|poreilla}},  {{t-|fi|porista}}
 * German: {{t+|de|blubbern}}
 * Hungarian: {{t-|hu|buborékol}}, {{t|hu|bugyborékol}}
