--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -56,7 +56,7 @@ Partly imitative, also influenced by {{term|burble}}.
 {{trans-mid}}
 * [[Macedonian]]: {{t|mk|меурче|n|tr=méurče|sc=Cyrl|xs=Macedonian}}
 * Portuguese: {{t-|pt|bolha|f}}
-* Russian: {{tr|ru|пузырёк|m|sc=Cyrl}}
+* Russian: {{t|ru|пузырёк|m|sc=Cyrl}}
 * [[Telugu]]: {{t|te|బుడగ|tr=buDaga|sc=Telu}}
 {{trans-bottom}}
 
