--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -25,6 +25,7 @@
 * Italian: {{t-|it|sottrazione|f}}
 * Japanese: [[引き算]] (ひきざん, hikizan)
 {{trans-mid}}
+* Persian: {{t|fa|تفریق|sc=fa-Arab}}
 * Polish: {{t-|pl|odejmowanie|n}}
 * Portuguese: {{t+|pt|subtração|f}}
 * Romanian: [[scădere]] {{f}}
