--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -88,6 +88,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 * Italian: {{t+|it|divisione|f}}
 * Kurdish: {{ku-Arab|[[دابه‌ش]]}}
 {{trans-mid}}
+* Persian: {{t|fa|تقسیم|sc=fa-Arab}}
 * Polish: {{t-|pl|dzielenie|n}}
 * Romanian: {{t-|ro|impartire|f}}
 * Russian: [[деление]] (delénije) {{n}}
