--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -619,6 +619,7 @@ From {{etyl|en|fr}} ''[[#English|break]]''.
 [[hy:break]]
 [[io:break]]
 [[it:break]]
+[[kk:break]]
 [[sw:break]]
 [[ku:break]]
 [[lo:break]]
