t+tg:[[каср]] ([[WT:EDIT|Assisted]]) <fraction#7148692>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -77,6 +77,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 * Russian: {{t+|ru|дробь|f|sc=Cyrl}}
 * Slovene: {{t+|sl|ulomek|m}}
 * Spanish: [[fracción]], {{f}}, [[quebrado]] {{m}}
+* [[Tajik]]: {{t|tg|каср|sc=Cyrl}}
 {{trans-bottom}}
 
 {{checktrans-top}}
