/* French */ [[Category:fr:Poker]] (and chess) <dame#7150120>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -76,7 +76,7 @@ Via Middle English and Old French from Latin ''[[domina]]''
 ==French==
 
 ===Etymology===
-From ''[[Latin]]'' ''[[domina]]''
+From {{etyl|la|fr}} ''[[domina]]''
 
 ===Pronunciation===
 * {{audio|Fr-dame.ogg|audio}}
@@ -93,6 +93,8 @@ From ''[[Latin]]'' ''[[domina]]''
 ====Derived terms====
 * [[jeu de dames]]
 
+[[Category:fr:Poker]]
+[[Category:fr:Chess]]
 ----
 
 ==Italian==
