--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -11,7 +11,7 @@
 * Homophones: [[rabbet]]
 
 ===Etymology 1===
-From Northern [[French]].
+From Northern [[French]] (cf. ''rabouillet''), from Walloon ''robète'', diminutive of Flemish or Middle Dutch ''robbe'', 'id', literally 'docked', referring to the animal's short cottontail.
 
 ====Noun====
 {{en-noun}}
