--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -8,7 +8,7 @@
 * {{rhymes|ædʒə(r)}}
 
 ===Etymology 1===
-From [[Middle English]] ''bageard'' 'marked by a badge', from ''bage'' 'badge', from [[Anglo-French]] ''bage'' 'emblem', referring to the animal's badge-like white blaze.
+From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage||badge|lang=enm}}, from {{etyl|xno}} {{term|bage||emblem|lang=xno}}, referring to the animal's badge-like white blaze.
 
 ====Noun====
 [[Image:Dachs.jpg|thumb|A badger]]
