--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-Unknown origin, though came to be associated with French [[dormir]] ‘sleep’.
+Unknown origin, though came to be associated with French {{term|dormir||to sleep|lang=fr}}.
 
 ===Pronunciation===
 * {{IPA|/ˈdɔːmaʊs/}}
