/* Translations */ trans <blow#7153390>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -98,7 +98,8 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-bottom}}
 
 {{trans-top|be propelled by an air current}} <!--2-->
-* Chinese traditional/simplified: [[隨風飄動]], [[隨風飄動]] (suí fēng piāo dòng)
+* Chinese
+:*Mandarin: {{zh-tsp|隨風飄動|随风飘动|suí fēng piāo dòng}}
 * Finnish: [[puhaltua]]
 * German: {{t+|de|wehen}}
 {{trans-mid}}
@@ -110,7 +111,8 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-top|explode}} <!--3-->
 * Armenian: {{t|hy|պայթել|tr=payt'el|sc=Armn|xs=Armenian}}
 * Bulgarian: {{t|bg|взривявам се|sc=Cyrl}},  {{t|bg|експлодирам|sc=Cyrl}}
-* Chinese tradtional/simplified: [[爆炸]], [[爆炸]] (bào zhà)
+* Chinese
+:*Mandarin: {{zh-tsp|爆炸|爆炸|bào zhà}}
 * Dutch: {{t+|nl|springen}}, {{t-|nl|ontploffen}}
 * Finnish: {{t-|fi|räjähtää}}
 * French: {{t+|fr|exploser}}
@@ -127,7 +129,8 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-bottom}}
 
 {{trans-top|be very undesirable}} <!--4-->
-* Chinese traditional/simplified: [[搞砸]], [[搞砸]] (gǎo zá)
+* Chinese
+:*Mandarin: {{zh-tsp|搞砸|搞砸|gǎo zá}}
 * Finnish: [[olla]] [[syvä|syvältä]]
 * Korean: [[제기랄]] (jegiral) (''interjection'')
 {{trans-mid}}
@@ -136,7 +139,8 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-bottom}}
 
 {{trans-top|(of a cetacean) exhale visibly through the spout the seawater}} <!--5-->
-* Chinese: {{zh-ts|喘氣|喘氣}} (chuǎn qì)
+* Chinese
+:*Mandarin: {{zh-tsp|喘氣|喘气|chuǎn qì}}
 * Dutch: {{t+|nl|spuiten}}
 * Finnish: {{t-|fi|suihkuttaa}}
 {{trans-mid}}
@@ -147,7 +151,8 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 
 {{trans-top|propel by an air current}} <!--6-->
 * Armenian: {{t-|hy|փչել|tr=p'čel|sc=Armn|xs=Armenian}}
-* Chinese traditional/simplified: [[刮走]], [[刮走]] (guā zǒu)
+* Chinese
+:*Mandarin: {{zh-tsp|刮走|刮走|guā zǒu}}
 * Dutch: {{t+|nl|blazen}}
 * Finnish: {{t+|fi|puhaltaa}}
 * German: [[blasen]], [[wegblasen]], [[fortblasen]], [[hinfortblasen]], [[pusten]], [[wegpusten]]
@@ -159,7 +164,8 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-bottom}}
 
 {{trans-top|squander}} <!--7-->
-* Chinese tradtional/simplified: [[浪費]], [[浪費]] (làng fèi)
+* Chinese
+:*Mandarin: {{zh-tsp|浪費|浪费|làng fèi}}
 * Dutch: {{t-|nl|doorjagen}}
 * Finnish: {{t+|fi|tuhlata}}, {{t-|fi|törsätä}}
 * Korean: [[날리다]] (nallida)
@@ -189,7 +195,8 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-bottom}}
 
 {{trans-top|create or shape by blowing}} <!--9-->
-* Chinese traditional/simplified: [[吹氣]], [[吹氣]] (chuī qì)
+* Chinese
+:*Mandarin: {{zh-tsp|吹氣|吹气|chuī qì}}
 * Dutch: {{t+|nl|blazen}}
 * Finnish: {{t+|fi|puhaltaa}}
 * Hebrew: [[לנפח]] (le'nape'akh)
@@ -202,7 +209,8 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-bottom}}
 
 {{trans-top|leave}} <!--10-->
-* Chinese traditional/simplified: [[離開]], [[離開]] (lí kāi)
+* Chinese
+:*Mandarin: {{zh-tsp|離開|离开|lí kāi}}
 * Finnish: {{t+|fi|häipyä}}
 * Korean: [[그만두다]] (geuman-duda)
 {{trans-mid}}
