--- a/en/l/lexer.775133.wikitext
+++ b/en/l/lexer.775133.wikitext
@@ -4,7 +4,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{computing}} A [[computer program]] that preforms [[lexical analysis]].
+# {{computing}} A [[computer program]] that performs [[lexical analysis]].
 
 ====Synonyms====
 * [[lexical analyzer]]
