iwiki +[[:uk:thing]] <thing#7158067>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -254,5 +254,6 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 [[te:thing]]
 [[th:thing]]
 [[tr:thing]]
+[[uk:thing]]
 [[vi:thing]]
 [[zh:thing]]
