--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -8,6 +8,7 @@
 
 ====Translations====
 {{trans-top|To specify each member of a sequence individually in incrementing order}}
+* Dutch: {{t|nl|uittellen}}
 * Finnish: [[luetella]]
 {{trans-mid}}
 * Hungarian: {{t|hu|felsorol}}
