--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -83,7 +83,25 @@
 # [[vodka#English|vodka]]
 
 [[Category:fr:Alcoholic beverages]]
+
 ----
+
+==Hungarian==
+
+===Pronunciation===
+* {{IPA|/ˈvotkɒ/|lang=hu}}
+* {{hyphenation|vod|ka}}
+
+===Noun===
+{{hu-noun|plural=vodkák}}
+
+# {{l|en|vodka}}
+
+====Declension====
+{{hu-decl-k-back|vodk|á}}{{hu-pos-tok|vodká}}
+
+----
+
 ==Italian==
 {{wikipedia|lang=it}}
 
