--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -500,6 +500,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Hebrew: {{t-|he|שבירה|f|alt=שְׁבִירָה|tr=sh'virá|sc=Hebr}}
 {{trans-mid}}
 * Latvian: {{t-|lv|lūšana|f|xs=Latvian}}
+* Spanish: {{t|es|quebrar}}
 * Swedish: {{t+|sv|brott|n}}
 {{trans-bottom}}
 
