--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -211,6 +211,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 [[kk:division]]
 [[sw:division]]
 [[hu:division]]
+[[ml:division]]
 [[pl:division]]
 [[pt:division]]
 [[ru:division]]
