--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|es}} ''[[las]] [[vegas]]'' 'the meadows'
+From {{etyl|es}} {{term|las|lang=es}} {{term|vegas||the meadows|lang=es}}.
 
 ===Proper noun===
 {{en-proper-noun}}
@@ -13,6 +13,11 @@ From {{etyl|es}} ''[[las]] [[vegas]]'' 'the meadows'
 * [[Vegas]]
 * [[Sin City]]
 * [[The Strip]]
+
+====Translations====
+{{trans-top|city}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[Category:Cities]]
 
