iwiki +[[:li:maximum]] <maximum#7164439>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -131,6 +131,7 @@ neutral of ''[[maximus]]''
 [[id:maximum]]
 [[it:maximum]]
 [[kk:maximum]]
+[[li:maximum]]
 [[hu:maximum]]
 [[nl:maximum]]
 [[pl:maximum]]
