t+th:[[กระต่าย]] t-balance ([[WT:EDIT|Assisted]]) <rabbit#7165984>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -87,8 +87,8 @@ From Northern [[French]].
 *: Kurmanji: {{t|ku|kêroşk}}, {{t|ku|xirrnîfk}}
 *: Sorani: {{ku-Arab|[[که‌روێشک]]}} (kêrwişk)
 * [[Ladin]]: [[conicio]]
-{{trans-mid}}
 * [[Ladino]]: [[konejo]]
+{{trans-mid}}
 * Latin: {{t-|la|cuniculus|m}}
 * Latvian: [[trusis]]
 * Lithuanian: {{t+|lt|triušis|xs=Lithuanian}}
@@ -124,6 +124,7 @@ From Northern [[French]].
 * [[Tagalog]]: [[kuneho]]
 * [[Taos]]: [[pȉwéna]]
 * [[Telugu]]: [[కుందేలు]] (kumdealu)
+* Thai: {{t|th|กระต่าย|tr=kratàai|sc=Thai}}
 * Turkish: {{t+|tr|tavşan}}
 * [[Tz'utujil]]: [[umul]]
 * [[Tzotzil]]: [[t'ul]]
