--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -141,6 +141,7 @@ The translations below need to be checked by native speakers and inserted into t
 [[io:bamboo]]
 [[lo:bamboo]]
 [[hu:bamboo]]
+[[ml:bamboo]]
 [[ja:bamboo]]
 [[pl:bamboo]]
 [[ru:bamboo]]
