--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -98,8 +98,8 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-bottom}}
 
 {{trans-top|be propelled by an air current}} <!--2-->
-* Chinese
-:*Mandarin: {{zh-tsp|隨風飄動|随风飘动|suí fēng piāo dòng}}
+* Chinese:
+*: Mandarin: {{zh-tsp|隨風飄動|随风飘动|suí fēng piāo dòng}}
 * Finnish: [[puhaltua]]
 * German: {{t+|de|wehen}}
 {{trans-mid}}
@@ -111,8 +111,8 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-top|explode}} <!--3-->
 * Armenian: {{t|hy|պայթել|tr=payt'el|sc=Armn|xs=Armenian}}
 * Bulgarian: {{t|bg|взривявам се|sc=Cyrl}},  {{t|bg|експлодирам|sc=Cyrl}}
-* Chinese
-:*Mandarin: {{zh-tsp|爆炸|爆炸|bào zhà}}
+* Chinese:
+*: Mandarin: {{zh-tsp|爆炸|爆炸|bào zhà}}
 * Dutch: {{t+|nl|springen}}, {{t-|nl|ontploffen}}
 * Finnish: {{t-|fi|räjähtää}}
 * French: {{t+|fr|exploser}}
@@ -129,8 +129,8 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-bottom}}
 
 {{trans-top|be very undesirable}} <!--4-->
-* Chinese
-:*Mandarin: {{zh-tsp|搞砸|搞砸|gǎo zá}}
+* Chinese:
+*: Mandarin: {{zh-tsp|搞砸|搞砸|gǎo zá}}
 * Finnish: [[olla]] [[syvä|syvältä]]
 * Korean: [[제기랄]] (jegiral) (''interjection'')
 {{trans-mid}}
@@ -139,8 +139,8 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-bottom}}
 
 {{trans-top|(of a cetacean) exhale visibly through the spout the seawater}} <!--5-->
-* Chinese
-:*Mandarin: {{zh-tsp|喘氣|喘气|chuǎn qì}}
+* Chinese:
+*: Mandarin: {{zh-tsp|喘氣|喘气|chuǎn qì}}
 * Dutch: {{t+|nl|spuiten}}
 * Finnish: {{t-|fi|suihkuttaa}}
 {{trans-mid}}
@@ -151,12 +151,12 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 
 {{trans-top|propel by an air current}} <!--6-->
 * Armenian: {{t-|hy|փչել|tr=p'čel|sc=Armn|xs=Armenian}}
-* Chinese
-:*Mandarin: {{zh-tsp|刮走|刮走|guā zǒu}}
+* Chinese:
+*: Mandarin: {{zh-tsp|刮走|刮走|guā zǒu}}
 * Dutch: {{t+|nl|blazen}}
 * Finnish: {{t+|fi|puhaltaa}}
-* German: [[blasen]], [[wegblasen]], [[fortblasen]], [[hinfortblasen]], [[pusten]], [[wegpusten]]
 {{trans-mid}}
+* German: [[blasen]], [[wegblasen]], [[fortblasen]], [[hinfortblasen]], [[pusten]], [[wegpusten]]
 * Korean: [[불다]] (bulda)
 * Polish: [[zdmuchnąć]]
 * Russian: [[сдувать]] (sduvát') {{impf}}, [[сдуть]] (sdut') {{pf}}
@@ -164,12 +164,12 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-bottom}}
 
 {{trans-top|squander}} <!--7-->
-* Chinese
-:*Mandarin: {{zh-tsp|浪費|浪费|làng fèi}}
+* Chinese:
+*: Mandarin: {{zh-tsp|浪費|浪费|làng fèi}}
 * Dutch: {{t-|nl|doorjagen}}
 * Finnish: {{t+|fi|tuhlata}}, {{t-|fi|törsätä}}
-* Korean: [[날리다]] (nallida)
 {{trans-mid}}
+* Korean: [[날리다]] (nallida)
 * Russian: [[продувать]] (produvát') {{impf}}, [[продуть]] (prodút') {{pf}}
 * Swahili: {{t|sw|panchi|xs=Swahili}}
 * Vietnamese: [[xài phí]], [[phung phí]]
@@ -195,13 +195,13 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-bottom}}
 
 {{trans-top|create or shape by blowing}} <!--9-->
-* Chinese
-:*Mandarin: {{zh-tsp|吹氣|吹气|chuī qì}}
+* Chinese:
+*: Mandarin: {{zh-tsp|吹氣|吹气|chuī qì}}
 * Dutch: {{t+|nl|blazen}}
 * Finnish: {{t+|fi|puhaltaa}}
 * Hebrew: [[לנפח]] (le'nape'akh)
-* Korean: [[불다]] (bulda)
 {{trans-mid}}
+* Korean: [[불다]] (bulda)
 * [[Macedonian]]: {{t-|mk|дува|tr=dúva|sc=Cyrl|xs=Macedonian}}
 * Russian: [[выдувать]] (vyduvát') {{impf}}, [[выдуть]] (výdut') {{pf}}
 * Swahili: {{t|sw|panchi|xs=Swahili}}
@@ -209,11 +209,11 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-bottom}}
 
 {{trans-top|leave}} <!--10-->
-* Chinese
-:*Mandarin: {{zh-tsp|離開|离开|lí kāi}}
+* Chinese:
+*: Mandarin: {{zh-tsp|離開|离开|lí kāi}}
 * Finnish: {{t+|fi|häipyä}}
-* Korean: [[그만두다]] (geuman-duda)
 {{trans-mid}}
+* Korean: [[그만두다]] (geuman-duda)
 * Swahili: {{t|sw|panchi|xs=Swahili}}
 * Vietnamese: [[bỏ đi]], [[chuồn]]
 {{trans-bottom}}
