iwiki +[[:ku:species]] <species#7183642>

--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -157,6 +157,7 @@ From {{term|specio|speciō|see|lang=la}} + {{term|-ies|-iēs|lang=la}} suffix si
 [[io:species]]
 [[id:species]]
 [[it:species]]
+[[ku:species]]
 [[la:species]]
 [[hu:species]]
 [[nl:species]]
