--- a/en/m/multicolour.34081.wikitext
+++ b/en/m/multicolour.34081.wikitext
@@ -12,13 +12,16 @@
 # {{chiefly|Canadian|Australian|Jamaican|British|International}} Having, [[resembling]], or pertaining to many or a world of [[colour]]s.
 
 ====Translations====
-* Dutch: [[bont]], [[bonte]], [[veelkleurig]], [[veelkleurige]]
-* Esperanto: [[multkolora]]
-* French: [[multicouleur]]
-* German: [[bunt]],[[vielfarbig]]
-* Italian: [[multicolore]]
-* Latin: [[multicolor]]
-* Romanian: [[multicolor]]
+{{trans-top}}
+* Dutch: {{t|nl|bont}}, {{t|nl|bonte}}, {{t|nl|veelkleurig}}, {{t|nl|veelkleurige}}
+* Esperanto: {{t|eo|multkolora}}
+* French: {{t|fr|multicooleur}}
+* German: {{t|de|bunt}}, {{t|de|vielfarbig}}
+{{trans-mid}}
+* Italian: {{t|it|multicolore}}
+* Latin: {{t|la|multicolor}}
+* Romanian: {{t|ro|multicolor}}
+{{trans-bottom}}
 
 [[fr:multicolour]]
 [[pl:multicolour]]
