--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -59,7 +59,7 @@
 * Greek: {{t+|el|διαφήμιση|f|tr=diafimisi|sc=Grek}}
 * Hebrew: [[פרסומת]] (pirsomet) {{f}}
 * Hungarian: {{t+|hu|hirdetés}}, {{t+|hu|reklám}}
-* Icelandic: {{t|is|auglysing|f}}
+* Icelandic: {{t|is|auglýsing|f}}
 * Indonesian: {{t+|id|iklan|xs=Indonesian}}, {{t-|id|reklame|xs=Indonesian}}
 * [[Interlingua]]: [[annuncio]], [[publicitate]], [[reclamo]], [[propaganda]]
 * Italian: {{t+|it|annuncio|m}}, {{t-|it|pubblicità|f}}
