--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -8,10 +8,12 @@
 
 ====Translations====
 {{trans-top|person skilled in metallurgy}}
+* Armenian: {{t|hy|մետաղագործ|tr=metaghagorc|sc=Armn}}
 * Belarusian: {{t|be|металург|m|sc=Cyrl|xs=Belarusian}}
 * Bulgarian: {{t|bg|металург|m|sc=Cyrl}}
-* Finnish: {{t+|fi|metallurgi}}
+* Czech: {{t|cs|metalurg|m}}
 {{trans-mid}}
+* Finnish: {{t+|fi|metallurgi}}
 * Russian: {{t|ru|металлург|m|tr=metallurg|sc=Cyrl}}
 * Spanish: {{t-|es|metalúrgico|m|f}}, {{t-|es|metalurgista|m}}
 {{trans-bottom}}
