--- a/en/e/energy source.776613.wikitext
+++ b/en/e/energy source.776613.wikitext
@@ -6,9 +6,10 @@
 # A source from which useful energy can be extracted or recovered either directly or by means of a conversion or transformation process (e.g. solid fuels, liquid fuels, [[solar energy]], [[biomass]], etc.)
 
 ====Translations====
-{{top}}
+{{trans-top|source from which energy can be extracted}}
 * Finnish: {{t-|fi|energianlähde}}
 {{mid}}
+* Italian: {{t-|it|fonte energetica|f}}, {{t-|it|fonte d'energia|f}}
 {{bottom}}
 
 [[ta:energy source]]
