/* Translations */ fix Italian <energy source#7235776>

--- a/en/e/energy source.776613.wikitext
+++ b/en/e/energy source.776613.wikitext
@@ -9,7 +9,7 @@
 {{trans-top|source from which energy can be extracted}}
 * Finnish: {{t-|fi|energianlähde}}
 {{mid}}
-* Italian: {{t-|it|fonte energetica|f}}, {{t-|it|fonte d'energia|f}}
+* Italian: {{t-|it|fonte di energia|f}}, {{t-|it|fonte energetica|f}}
 {{bottom}}
 
 [[ta:energy source]]
