--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -8,7 +8,7 @@
 
 ====Translations====
 {{trans-top|person skilled in metallurgy}}
-* Armenian: {{t|hy|մետաղագործ|tr=metaghagorc|sc=Armn}}
+* Armenian: {{t|hy|մետաղագործ|tr=metaġagorç|sc=Armn}}
 * Belarusian: {{t|be|металург|m|sc=Cyrl|xs=Belarusian}}
 * Bulgarian: {{t|bg|металург|m|sc=Cyrl}}
 * Czech: {{t|cs|metalurg|m}}
