--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -99,7 +99,7 @@
 * Maltese: [[ħanżir]] {{m}}
 * [[Maléku Jaíka]]: {{tø|gut|tunhífa}}
 * Maori: [[poaka]]
-* Navajo: {{tø|nv|bisoodi}}
+* Navajo: {{tø|nv|bisóodi}}
 * Norwegian: {{t+|no|svin|n}}, {{t+|no|gris|m}}
 * [[Occitan]]: [[pòrc]] {{m}}
 * [[Old Church Slavonic]]: {{tø|cu|свиниꙗ|f|tr=svinija|sc=Cyrs}}
