iwiki +[[:ml:theory]] <theory#7246076>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -228,6 +228,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 [[ku:theory]]
 [[lo:theory]]
 [[hu:theory]]
+[[ml:theory]]
 [[ja:theory]]
 [[pl:theory]]
 [[pt:theory]]
