--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -1,3 +1,4 @@
+{{wikipedia}}
 ==English==
 
 ===Etymology===
@@ -12,6 +13,8 @@ Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond th
 
 # A broken or nonfunctional device that does not perform its intended function, such as a [[bomb]].
 # {{obsolete}} Clothes, now always used in plural form [[duds]].
+
+See more information on the evolution of its meaning at the [[w:dud|English wikipedia]]
 
 ====Translations====
 {{trans-top|a broken or nonfunctional device that does not perform its intended function}}
