iwiki +[[:ml:blow]] <blow#7252188>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -342,6 +342,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 [[ku:blow]]
 [[li:blow]]
 [[hu:blow]]
+[[ml:blow]]
 [[nl:blow]]
 [[ja:blow]]
 [[oc:blow]]
