t+de:[[Stab]] ([[WT:EDIT|Assisted]]) <staff#7257013>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -71,7 +71,7 @@
 * Dutch: [[:nl:medewerkers|medewerkers]] {{m|p}}
 * Finnish: {{t-|fi|henkilöstö}, {{t-|fi|henkilökunta}}
 * French: {{t+|fr|personnel|m}}, {{t+|fr|staff|m}}
-* German: {{t+|de|Belegschaft|f}}, {{t+|de|Personal|n}}
+* German: {{t+|de|Belegschaft|f}}, {{t+|de|Personal|n}},  {{t|de|Stab|m}}
 * Italian: {{t+|it|personale|m}}
 * [[Macedonian]]: {{t|mk|персонал|m|tr=personál|sc=Cyrl|xs=Macedonian}},  {{t|mk|кадар|m|tr=kádar|sc=Cyrl|xs=Macedonian}}
 {{trans-mid}}
