--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -91,6 +91,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * [[Macedonian]]: {{t-|mk|дува|tr=dúva|sc=Cyrl|xs=Macedonian}}
 * Polish: {{t+|pl|dmuchać}}
 * Portuguese: {{t+|pt|assoprar}}
+* Romanian: {{t|ro|sufla}}
 * Russian: [[дуть]] (dut') {{impf}}, [[дунуть]] (dúnut') {{pf}}; [[сморкаться]] (smorkát's'a) {{impf}}, [[сморкнуться]] (smorknút's'a) {{pf}} ''blow the nose''
 * [[Scottish Gaelic]]: [[séid]]
 * Slovene: {{t+|sl|pihati}}
