t+rm:[[sufflar]] ([[WT:EDIT|Assisted]]) <blow#7257246>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -92,6 +92,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * Polish: {{t+|pl|dmuchać}}
 * Portuguese: {{t+|pt|assoprar}}
 * Romanian: {{t|ro|sufla}}
+* [[Romansch]]: {{t|rm|sufflar}}
 * Russian: [[дуть]] (dut') {{impf}}, [[дунуть]] (dúnut') {{pf}}; [[сморкаться]] (smorkát's'a) {{impf}}, [[сморкнуться]] (smorknút's'a) {{pf}} ''blow the nose''
 * [[Scottish Gaelic]]: [[séid]]
 * Slovene: {{t+|sl|pihati}}
