--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -92,7 +92,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * Latin: {{t|la|flo}}, {{t|la|flare}}
 * [[Macedonian]]: {{t-|mk|дува|tr=dúva|sc=Cyrl|xs=Macedonian}}
 * Polish: {{t+|pl|dmuchać}}
-* Portuguese: {{t+|pt|assoprar}}
+* Portuguese: {{t+|pt|soprar}}, {{t+|pt|assoprar}}
 * Romanian: {{t|ro|sufla}}
 * [[Romansch]]: {{t|rm|sufflar}}
 * Russian: [[дуть]] (dut') {{impf}}, [[дунуть]] (dúnut') {{pf}}; [[сморкаться]] (smorkát's'a) {{impf}}, [[сморкнуться]] (smorknút's'a) {{pf}} ''blow the nose''
