t+tr:[[ağırlık]] ([[WT:EDIT|Assisted]]) <weight#7262482>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -59,6 +59,7 @@
 * Russian: [[вес]] (v'es) {{m}}
 * Swedish: {{t+|sv|tyngd|c}}, {{t+|sv|vikt|c}}
 * [[Telugu]]: [[భారము]] (bhaaramu)
+* Turkish: {{t|tr|ağırlık}}
 * Ukrainian: [[вага]] (wah'''a''') {{f}}
 {{trans-bottom}}
 
@@ -93,6 +94,7 @@
 * Japanese: [[分銅]] (fundō)
 * Russian: {{t+|ru|гиря|f|tr=gír'a|sc=Cyrl}}
 * Swedish: {{t+|sv|vikt|c}}
+* Turkish: {{t|tr|ağırlık}}
 {{trans-bottom}}
 
 {{trans-top|sport device}}
@@ -106,6 +108,7 @@
 * Russian: [[блин]] (blin) {{m}} ''disc'', [[гиря]] (gír'a) {{f}} ''dumbbell'', [[гантель]] (gantél') {{f}} ''barbell''
 * Spanish: {{t-|es|pesa|f}}
 * Swedish: {{t+|sv|vikt|c}}
+* Turkish: {{t|tr|ağırlık}}
 {{trans-bottom}}
 
 {{trans-top|physics: mass}}
@@ -122,6 +125,7 @@
 * Russian: [[вес]] (v'es) {{m}}, [[масса]] (mássa) {{f}}
 * Spanish: {{t+|es|masa|f}}
 * Swedish: {{t+|sv|massa|c}}
+* Turkish: {{t|tr|ağırlık}}
 {{trans-bottom}}
 
 {{trans-top|statistics: statistical value}}
