--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -28,7 +28,7 @@
 * French: {{t+|fr|regarder}}, {{t+|fr|voir}}
 * German: {{t+|de|betrachten}}, {{t+|de|sehen}}, {{t+|de|schauen}}
 {{trans-mid}}
-* Hungarian: {{t|hu|nézni}},  {{t|hu|meglát}}
+* Hungarian: {{t|hu|meglát}}
 * Icelandic: {{t+|is|sjá}}
 * Italian: {{t+|it|guardare}}
 * [[Macedonian]]: [[Гледа]], [[Следи]]
