--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -25,7 +25,10 @@ Old English ''[[þonne]]''. Cognate with German [[denn]].
 #: ''If it’s locked, '''then''' we’ll need the key.''
 # at the same time; on the other hand.
 #: ''That’s a nice shirt, but '''then''', so is the other one.''
-
+# {{obsolete}} At the time that; [[when]].
+#*'''1485''', Sir Thomas Malory, ''Le Morte Darthur'', Book I.23:
+#:*'''Than''' the knyght sawe hym lye soo on the ground, he alyght and was passynge heuy, for he wende he had slayne hym [...].
+ 
 ====Synonyms====
 * {{sense|soon afterward}} [[and then]], [[and so]], [[subsequently]], [[so]]
 * {{sense|next in order}} [[and then]]
