--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -57,7 +57,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * Japanese: [[出血]]する ([[しゅっけつ]]する, shukketsu suru), [[血]]を[[流す]] ([[ち]]を[[ながす]], chi o nagasu)
 * [[Khmer]]: {{Khmr|[[ចេញឈាម]]}} (jeuñ chīəum)
 * Korean: {{t|ko|피를 흘리다|sc=Kore}}
-* {{trreq|Latin}}
+* Latin: {{t|la|sanguinem mitto|alt=sanguinem mittō}}
 * {{trreq|Latvian}}
 * {{trreq|Lithuanian}}
 * {{trreq|Mongolian}}
@@ -83,6 +83,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * Bulgarian: {{t|bg|проливам кръв|sc=Cyrl}},  {{t|bg|пускам кръв|sc=Cyrl}}
 * Irish: {{t|ga|fuiligh|xs=Irish}}
 {{trans-mid}}
+* Latin: {{t|la|depleo|alt=dēpleō}},  {{t|la|phlebotomo|alt=phlebotomō}}
 {{trans-bottom}}
 
 {{trans-top|take money from}}
