t+la:[[accommodatio]] ([[WT:EDIT|Assisted]]) <adjustment#7288599>

--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -43,7 +43,7 @@
 * Italian: {{t+|it|adattamento|m}}, {{t+|it|inserimento|m}}
 * Japanese: [[調整]] (chōsei); [[調節]] (chōsetsu)
 * {{trreq|Korean}}
-* {{trreq|Latin}}
+* Latin: {{t|la|accommodatio|f|alt=accommodātiō}}
 * Polish: [[ustawienie]] {{n}}, [[regulacja]] {{f}}
 * Portuguese: [[ajustamento]] {{m}}, [[ajuste]] {{m}}
 * Russian: {{t|ru|юстировка|f|tr=justiróvka|sc=Cyrl}}
