t+sv:[[närvara]] t+sv:[[delta]] ([[WT:EDIT|Assisted]]) <attend#7288978>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -33,6 +33,7 @@ From {{etyl|fro}} {{term|atendre}} < {{etyl|la}} {{term|attendere||to stretch to
 * Portuguese: [[assistir]], [[participar em]], [[estar presente em]]
 * Russian: {{t|ru|посещать|tr=poseščát'|sc=Cyrl}},  {{t|ru|присутствовать|tr=prisútstvovat'|sc=Cyrl}}
 * Spanish: {{t-|es|asistir}}
+* Swedish: {{t|sv|närvara}},  {{t|sv|delta}}
 * Welsh: {{t|cy|mynychu|xs=Welsh}}
 {{trans-bottom}}
 
