t+gd:[[muileann]] ([[WT:EDIT|Assisted]]) <mill#7302805>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -64,6 +64,7 @@
 * Polish: {{t+|pl|młyn|m}}
 * Portuguese: [[moenda]] {{f}}, [[moinho]] {{m}}
 * Russian: {{t|ru|мельница|f|tr=mél’nitsa|sc=Cyrl}}
+* [[Scottish Gaelic]]: {{t|gd|muileann|m|f}}
 * Serbian:
 *: Cyrillic: [[млин]] {{m}}
 *: Roman: [[mlin]] {{m}}
@@ -76,6 +77,7 @@
 {{trans-top|building housing a grinding apparatus}}
 * Finnish: {{t+|fi|mylly}}
 {{trans-mid}}
+* [[Scottish Gaelic]]: {{t|gd|muileann|m|f}}
 {{trans-bottom}}
 
 {{trans-top|manufacturing plant}}
@@ -91,6 +93,7 @@
 * Polish: {{t+|pl|fabryka|f}}
 * Portuguese: {{t+|pt|fábrica|f}}, {{t+|pt|manufatura|f}}
 * Russian: {{t+|ru|фабрика|f|tr=fábrika|sc=Cyrl}}, {{t+|ru|завод|m|tr=zavód|sc=Cyrl}}
+* [[Scottish Gaelic]]: {{t|gd|muileann|m|f}}
 * Spanish: {{t-|es|fabrica|f}}
 * Turkish: {{t+|tr|fabrika}}
 {{trans-bottom}}
