--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -160,6 +160,7 @@ From the noun ''mill''
 * French: {{t+|fr|moudre}}
 * [[Macedonian]]: {{t|mk|меле|tr=méle|sc=Cyrl|xs=Macedonian}}, {{t|mk|сомелува|tr=soméluva|sc=Cyrl|xs=Macedonian}}, {{t|mk|сомелува|tr=soméluva|sc=Cyrl|xs=Macedonian}}
 {{trans-mid}}
+* Polish: [[mleć]]
 * Portuguese: {{t+|pt|moer}}
 * Russian: {{t|ru|молоть|tr=molót'|sc=Cyrl}} {{impf}}, {{t|ru|смолоть|tr=smolót'|sc=Cyrl}} {{pf}}
 {{trans-bottom}}
