iwiki +[[:ml:fraction]] <fraction#7331205>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -111,6 +111,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 [[kn:fraction]]
 [[sw:fraction]]
 [[hu:fraction]]
+[[ml:fraction]]
 [[ja:fraction]]
 [[oc:fraction]]
 [[ru:fraction]]
