--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -14,6 +14,10 @@
 
 ====Synonyms====
 * [[musquash]]
+* [[musk shrew]]
+
+====Alternative spellings====
+* [[musk=rat]]
 
 ====Translations====
 {{trans-top|rodent}}
