--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -26,6 +26,7 @@
 * Bosnian: [[bizamski pacov]] {{m}}
 * [[Breton]]: [[razh-musk]]
 * Bulgarian: [[мускус]] ([[muskus]])
+* Canarese: [[sondeli]]
 * Cherokee: [[ᏎᎳᎩᏍᏆ]] (selagisqua)
 * Croatian: [[mošusni štakor|mošusni]] / [[bizamski štakor]]
 * Czech: [[ondatra]]
