--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -26,7 +26,6 @@
 * Bosnian: [[bizamski pacov]] {{m}}
 * [[Breton]]: [[razh-musk]]
 * Bulgarian: [[мускус]] ([[muskus]])
-* Canarese: [[sondeli]]
 * Cherokee: [[ᏎᎳᎩᏍᏆ]] (selagisqua)
 * Croatian: [[mošusni štakor|mošusni]] / [[bizamski štakor]]
 * Czech: [[ondatra]]
@@ -45,6 +44,7 @@
 * Irish: [[muscfhrancach]]
 * Italian: [[topo muschiato]] {{m}}
 * Korean: [[사향쥐]] (sahyangjwi)
+* Kannada: [[sondeli]]
 * Latin: [[Ondatra zibethicus]]
 * Latvian: [[ondatra]]
 {{trans-mid}}
