/* English */ expanding <again#7331923>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -4,19 +4,24 @@
 {{rank|still|just|while|144|again|also|away|against}}
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/əˈgeɪn/}} {{SAMPA|/@"geIn/}}
+* {{a|UK}} {{IPA|/əˈɡeɪn/|əˈɡɛn/}} {{SAMPA|/@"geIn/}}
 * {{a|US}} {{IPA|/əˈgɛn/}} {{SAMPA|/@"gEn/}}
 * {{audio|en-us-again.ogg|Audio (US)}}
 *: {{rhymes|eɪn}}
 * {{hyphenation|a|gain}}
 
 ===Etymology===
-{{etyl|ang}} ''[[onġean]]''.
+{{etyl|ang}} {{term|ongean|onġēan}}.
 
 ===Adverb===
 {{en-adv|-}}
 
-# Having [[already]] [[happen]]ed before.
+# [[in return|In return]], as a reciprocal action; [[back]].
+#*'''1485''', Sir Thomas Malory, ''Le Morte Darthur'', Book III:
+#*:Merlyn warned the kynge couertly that gweneuer was not holsome for hym to take to wyf, for he warned hym that launcelot shold loue her and she hym '''ageyne''' [...].
+# [[back|Back]] (to a former place or state).
+#:''We need to bring the old customs to life again.''
+# Another time; once more.
 #: ''I didn't do a very good job the first time, and now I have to do it '''again'''.''
 
 ====Quotations====
@@ -28,7 +33,7 @@
 * [[once again]]
 
 ====Translations====
-{{trans-top|having already happened before}}
+{{trans-top|another time}}
 * [[Afrikaans]]: [[weer]], [[alweer]]
 * Arabic: {{Arab|[[مرة اخرى]]}} (mára ’úxra)
 * Armenian: [[էլի]] (ēli)
