/* Verb */ sv <bleed#7332650>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -72,7 +72,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * Slovene: {{t+|sl|krvaveti}}
 * Spanish: {{t-|es|sangrar}}
 * {{trreq|Swahili}}
-* {{trreq|Swedish}}
+* Swedish: {{t|sv|blöda}}
 * Thai: {{Thai|[[ตกเลือด]]}} (dtòk lêuat)
 * Turkish: [[kanamak]] [-ar]
 * {{trreq|Vietnamese}}
@@ -91,8 +91,14 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 {{trans-mid}}
 {{trans-bottom}}
 
+{{trans-top|steadily lose}}
+{{trans-mid}}
+* Swedish: {{t|sv|blöda}}
+{{trans-bottom}}
+
 {{trans-top|spread and stain}}
 {{trans-mid}}
+* Swedish: {{t|sv|blöda}}
 {{trans-bottom}}
 
 {{trans-top|remove air bubbles}}
