+ca: f of [[-ic]] <-ica#7334807>

--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -1,12 +1,19 @@
+==Catalan==
+
+===Suffix===
+{{infl|ca|suffix|g=f|sort=ica}}
+
+# {{ca-feminine of|-ic}}
+
+----
+
 ==Croatian==
 
 ===Suffix===
-'''-ica'''
+{{infl|hr|suffix|sort=ica}}
 
 # Suffix appended to words to create a feminine noun, commonly used for forming [[diminutives]], denoting a profession, human relation, term of endearment, document, paper, or to form a proper name.
 # Suffix appended to words to create a masculine or feminine noun, usually a [[pejorative]].
 
 ===See also===
 * {{l|hr|-čica}}
-
-[[Category:Croatian suffixes|ica]]
