--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -160,6 +160,7 @@ From {{term|specio|speciō|see|lang=la}} + {{term|-ies|-iēs|lang=la}} suffix si
 [[ku:species]]
 [[la:species]]
 [[hu:species]]
+[[ml:species]]
 [[nl:species]]
 [[ja:species]]
 [[no:species]]
