--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -16,6 +16,7 @@
 
 ====Translations====
 {{trans-top|a wager}}
+* [[Basque]]: {{t|eu|trabes}}
 * Bulgarian: {{t|bg|бас|sc=Cyrl}},  {{t|bg|облог|m|sc=Cyrl}}
 * Czech: {{t-|cs|sázka|f}}
 * Dutch: {{t-|nl|weddenschap|f}}
