t+eu:[[haga]] t-balance ([[WT:EDIT|Assisted]]) <staff#7337104>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -31,6 +31,7 @@
 
 ====Translations====
 {{trans-top|long, straight stick}}
+* [[Basque]]: {{t|eu|haga}}
 * [[Chamicuro]]: {{tø|ccc|chaskolo}}
 * Croatian: {{t-|hr|štap|m}}
 * Czech: {{t+|cs|hůl|f}}
@@ -39,8 +40,8 @@
 * French: {{t+|fr|staff|m}}, {{t+|fr|canne|f}}
 * German: {{t+|de|Stab|m}}
 * Hebrew: {{t-|he|מקל|m|alt=מַקֵּל|sc=Hebr}}
-* [[Ido]]: [[bastono]]
 {{trans-mid}}
+* [[Ido]]: [[bastono]]
 * Indonesian: [[toya]]
 * Italian: {{t+|it|bastone|m}}
 * [[Macedonian]]: {{t-|mk|стап|m|tr=stap|sc=Cyrl|xs=Macedonian}}
