--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -3,4 +3,4 @@
 {{wikipedia}}
 {{wikiquote}}
 {{en-noun|sg=[[anarcho]]-[[capitalism]]|-}}
-# A [[philosophy]] that advocates the [[elimination]] of the [[state]] and the [[provision]] of all [[government]]al [[service]]s by self-regulating [[free market]] [[competitor]]s.
+# A [[philosophy]] that advocates the [[self]]-[[ownership]] of the [[individual]]s and the [[elimination]] of the [[state]] and the [[provision]] of all [[government]]al [[service]]s by self-regulating [[free market]] [[competitor]]s.
