/* Translations */ ++fr <bound#7338885>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -81,7 +81,7 @@ See [[bind]]
 * [[Catalan]]: {{t|ca|límit|m}}
 * Dutch: {{t+|nl|grens}}, {{t+|nl|limiet}}
 * Finnish: {{t+|fi|raja}}
-* French: {{t+|fr|frontière}}
+* French: {{t+|fr|frontière|f}}, {{t+|fr|borne|f}}
 {{trans-mid}}
 * German: {{t+|de|Abgrenzung|f}}, [[Grenz]]
 * Italian: {{t+|it|frontiera|f}}
