/* Translations */ +ca <itself#7350703>

--- a/en/i/itself.7369.wikitext
+++ b/en/i/itself.7369.wikitext
@@ -15,13 +15,15 @@
 
 ====Translations====
 {{trans-top|(reflexive) it}}
-* Spanish: {{t+|es|se}}
+* [[Catalan]]: {{t|ca|es}}
 {{trans-mid}}
+* Spanish: {{t+|es|se}}
 {{trans-bottom}}
 {{trans-top|(emphatic) it}}
 * [[American Sign Language]]: {{tø|ase|A@Chesthigh SmallFrontandback|xs=American Sign Language}}
-* French: {{t+|fr|soi-même}}
+* [[Catalan]]: {{t-|ca|mateix}}
 {{trans-mid}}
+* French: {{t+|fr|soi-même}}
 * Spanish: [[sí mismo]]
 {{trans-bottom}}
 {{checktrans-top}}
