--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -44,7 +44,7 @@
 {{trans-bottom}}
 
 {{trans-top|address to any male, especially if his name or proper address is unknown}}
-* Arabic: {{t|ar|أستاذ|m|tr=ʼustaadh|sc=Arab}},  {{t|ar|سيد|m|tr=sáyyid|sc=Arab}}, {{t|ar|سيدي|m|tr=sayyidi|sc=Arab}},  {{t|ar|حضرتك|m|tr=HaDrátak|sc=Arab}}
+* Arabic: {{t|ar|أستاذ|m|tr=ʼustaadh|sc=Arab}},  {{t|ar|سيد|m|tr=sáyyid|sc=Arab}}, {{t|ar|سيدي|m|tr=sayyidi|sc=Arab}},  {{t|ar|حضرتك|m|tr=HaDrátak|sc=Arab}},  {{t|ar|أفندي|m|tr='afándiy|sc=Arab}}
 * Armenian: {{t-|hy|պարոն|tr=paron|sc=Armn|xs=Armenian}}
 * Belarusian: {{t|be|спадар|m|tr=spadár|sc=Cyrl|xs=Belarusian}},  {{t-|be|пан|m|tr=pan|sc=Cyrl|xs=Belarusian}}
 * Chinese:
