t+cs:[[pan]] t-balance t+cs:[[pán]] ([[WT:EDIT|Assisted]]) <sir#7352458>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -49,9 +49,10 @@
 * Belarusian: {{t|be|спадар|m|tr=spadár|sc=Cyrl|xs=Belarusian}},  {{t-|be|пан|m|tr=pan|sc=Cyrl|xs=Belarusian}}
 * Chinese:
 *: Mandarin: {{t-|cmn|先生|tr=xiānsheng|sc=Hani|xs=Mandarin}}
+* Czech: {{t|cs|pan|m}},  {{t|cs|pán|m}}
 * Dutch: {{t+|nl|meneer|m}}, {{t+|nl|mijnheer|m}}
-* French: {{t+|fr|monsieur|m}}
 {{trans-mid}}
+* French: {{t+|fr|monsieur|m}}
 * German: [[Herr]] {{m}}, [[mein Herr]] {{m}} (''my lord'')
 * Japanese: {{t|ja|だんな|tr=danna|sc=Jpan}}
 * Kurdish: {{ku-Arab|[[کاک]]}}
