--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -39,8 +39,9 @@
 
 {{trans-top|address to a military superior}}
 * Dutch: {{t+|nl|meneer|m}}
-{{trans-mid}}
 * French: {{t+|fr|monsieur|m}}
+{{trans-mid}}
+* Russian: {{qualifier|in the Russian army}} {{t|ru|товарищ|m|tr=továrišč|sc=Cyrl}},  {{qualifier|n translations from English}} {{t|ru|сэр|m|tr=ser|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|address to any male, especially if his name or proper address is unknown}}
