--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -27,7 +27,7 @@
 * Arabic: {{Arab|[[ضبط]]}} (ḍabṭ) {{m}}
 * {{trreq|Basque}}
 * Bulgarian: {{t|bg|нагласяване|sc=Cyrl}},  {{t|bg|приспособяване|sc=Cyrl}},  {{t|bg|настройка|sc=Cyrl}}
-* {{trreq|Catalan}}
+* [[Catalan]]: {{t|ca|ajust|m}}, {{t|ca|ajustment|m}}
 * Danish: {{t|da|justering|c}}, {{t|da|tilpasning|c}}
 * Dutch: [[aanpassing]] {{f}}, [[bijregeling]] {{f}}
 * Esperanto: {{t-|eo|adapto|xs=Esperanto}},  {{t|eo|akomodo|xs=Esperanto}},  {{t|eo|alĝustigo|xs=Esperanto}},  {{t|eo|ĝustigo|xs=Esperanto}}
