--- a/en/p/public school.34050.wikitext
+++ b/en/p/public school.34050.wikitext
@@ -16,6 +16,7 @@
 {{trans-top|publicly administered school}}
 * Finnish: {{t+|fi|yleinen}} {{t+|fi|koulu}},  {{t+|fi|peruskoulu}}
 {{trans-mid}}
+* Portuguese: {{t|pt|escola pública}}
 {{trans-bottom}}
 
 {{checktrans-top}}
