--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -89,7 +89,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-mid}}
 * Korean: [[불다]] (bulda)
 * Kurdish: {{ku-Arab|[[فو]]}}
-* Latin: {{t|la|flo}}
+* Latin: {{t|la|flo}},  {{t|la|sufflo}}
 * [[Macedonian]]: {{t-|mk|дува|tr=dúva|sc=Cyrl|xs=Macedonian}}
 * Polish: {{t+|pl|dmuchać}}
 * Portuguese: {{t+|pt|soprar}}, {{t+|pt|assoprar}}
