removed inappropriate "See also'', merging terms with derived terms; made derived terms collapsible and added [[leather-lunged]] <leather#7380436>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -1,5 +1,5 @@
-{{wikipedia}}
 ==English==
+{{wikipedia}}
 
 ===Etymology===
 Old English ''[[leþer]]''
@@ -88,9 +88,6 @@ Old English ''[[leþer]]''
 # Made of leather.
 # Referring to one who wears leather clothing (motorcycle jacket, chaps over 501 jeans, boots), especially as a sign of sadomasochistic homosexuality.
 
-====See also====
-* [[leathern]], [[leathery]]
-
 ====Translations====
 {{trans-top|made of leather}}
 * Bosnian: {{t-|bs|kožni|m}}
@@ -115,14 +112,22 @@ Old English ''[[leþer]]''
 # To cover with leather.
 
 ===Derived terms===
+{{rel-top3|Terms derived from the adjective, noun, or verb ''leather''}}
 * [[hell-for-leather]]
 * [[leatherback]]
 * [[leatherette]]
 * [[leatherhead]]
+{{rel-mid3}}
 * [[leatherjacket]]<!--a type of fish-->
 * [[leather jacket]]<!--a jacket made of leather-->
+* [[leather-lunged]]
 * [[leathern]]
+{{rel-mid3}}
+* [[leathery]]
 * [[wash-leather]]
+{{rel-bottom}}
+
+
 
 [[Category:1000 English basic words]]
 
