iwiki +[[:ta:behold]] <behold#7381449>

--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -57,7 +57,8 @@
 [[ru:behold]]
 [[fi:behold]]
 [[sv:behold]]
+[[ta:behold]]
 [[te:behold]]
-[[vi:behold]]
 [[uk:behold]]
+[[vi:behold]]
 [[zh:behold]]
