--- a/en/m/mitoses.720279.wikitext
+++ b/en/m/mitoses.720279.wikitext
@@ -8,10 +8,12 @@
 ----
 
 ==French==
-{{pron|mi.tɔz}}
+
+===Pronunciation===
+* {{IPA|/mi.tɔz/|lang=fr}}
 
 ===Noun===
-'''mitoses'''
+'''mitoses''' {{f|p}}
 
 # {{plural of|[[mitose]]|lang=fr}}
 
