--- a/en/d/dtn.855030.wikitext
+++ b/en/d/dtn.855030.wikitext
@@ -1,26 +1,13 @@
-<!-- Please do not remove or change this AfD message until the issue is settled -->
-{{AfDM|page=Dtn (printer designation)|date=2007 December 19|substed=yes}}
-<!-- For administrator use only: {{oldafdfull|page=Dtn (printer designation)|date=19 December 2007|result='''keep'''}} -->
-<!-- End of AfD message, feel free to edit beyond this point -->
-[[Category:Move to Wiktionary 2007-12]]
+==English==
 
-== [[Duplex, Tray, Network]] dtn (printer designation) ==
+==={{initialism}}===
+'''dtn''' 
 
-'''dtn''' is an acronym which stands for '''[[duplex|Duplex]], [[tray|Tray]], [[network|Network]]''' in relation to the selling of [[laser printers]].
-It is used as a designation that a [[printer]] has '''D'''uplex (double sided printing) capability,  paper '''T'''rays and is '''N'''etworkable
+# {{computers}} '''[[duplex]], [[tray]], [[network]]''': In relation to the selling of [[laser printers]], a designation that a [[printer]] has ''duplex'' (double sided printing) capability,  paper trays and is 'networkable.
 
-Note - the '''T''' designation generally relates to a printer being sold with additional cassette printer trays in addition to to any interanl paper tray.  Printers being sold without additional trays that have duplex and networking ability will normally be designated as a ['''dn'''] printer just an inbuiltay 
-This acronym is used by various [[printer]] manufacturers when selling printers (eg [[Hewlett-Packard]], [[Lexmark]]) 
-
-
-== Sources ==
+===References===
 
 * http://acronyms.thefreedictionary.com/DTN
 * http://www.acronymfinder.com/af-query.asp?acronym=DTN
 * http://www.hp.com
 * http://www.lexmark.com
-
-{{uncat}}
-
-{{computer-stub}}
-[[Category:Move to Wiktionary 2007-12]]
