--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -44,6 +44,7 @@ Old English ''[[leþer]]''
 * Korean: [[가죽]] (gajuk)
 * Lithuanian: {{t+|lt|oda|f|xs=Lithuanian}}
 * [[Malayalam]]: [[തോല്‍]] (thOl)
+* Norwegian Bokmål: {{tø|nb|lær|n}}
 * [[Old Church Slavonic]]: {{tø|cu|кожа|f|tr=koža|sc=Cyrs}}
 * Polish: {{t+|pl|skóra|f}}
 * Portuguese: {{t+|pt|couro|m}}
